--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -3,3 +3,4 @@ include-system-site-packages = false
 version = 3.11.1
 executable = C:\Users\ravit\AppData\Local\Programs\Python\Python311\python.exe
 command = C:\Users\ravit\AppData\Local\Programs\Python\Python311\python.exe -m venv R:\Edu\TaskTracker\env
+#test
